--- a/vue3/PlatForm/src/assets/styles/common.less
+++ b/vue3/PlatForm/src/assets/styles/common.less
@@ -1,5 +1,5 @@
 html, body, div, h1, h2, h3, h4, h5, h6, ul, ol, dl, li, dt, dd, p, blockquote,
-pre, form, fieldset, table, th, td {
+pre, form, fieldset, table, th, td, header {
     margin: 0;
     padding: 0;
     font-size: 14px;
